# orthohedra

./: .gitignore  Doxyfile  LICENSE  Makefile  Makefile.am  README.txt  configure.ac
examples/: .gitignore  01.cpp  02.cpp  Makefile
include/: orthohedra.h
measure/: 01_n_vertexrepr_color.cpp  02_n_nbhoodrepr_color.cpp  03_n_vertexrepr_complement.cpp  04_n_nbhoodrepr_complement.cpp  05_n_vertexrepr_intersection.cpp  06_n_nbhoodrepr_intersection.cpp  Makefile  measure.sh  utils.cpp  utils.h
src/: .gitignore  Makefile.am  grid_repr.cpp  grid_repr.h  main.cpp  nbhood_repr.cpp  nbhood_repr.h  orthohedra.cpp  orthohedra.h  repr.cpp  repr.h  space.cpp  space.h  vertex_repr.cpp  vertex_repr.h
src/test/: test.cpp  test.h  test_float_nbhood_repr.cpp  test_float_trivial_polyhedron.cpp  test_float_vertex_repr.cpp  test_grid_repr.cpp  test_nbhood_repr.cpp  test_ndimtable.cpp  test_trivial_polyhedron.cpp  test_vertex_repr.cpp
src/test/data/uint/grid_repr/: 01.txt  02.txt  03.txt  04.txt  05.txt  05_space.txt  06.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  18.txt  19.txt  20.txt  22.txt  23.txt  24.txt  25.txt  26.txt  26_space.txt  27.txt
src/test/data/uint/vertex_repr/: 01.txt
